# Python.Publisher.Subscriber

./: .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  base_messages.py  client.html  client.py  docker-compose.yml  pubsub.db  pubsub_ws.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  pre-commit.yml  release.yml
lib/: client_invocation.py  pubsub_client.py  pubsub_message.py
migrations/: 001_add_message_id_and_producer.sql
src/: client.py  pubsub_ws.py
src/pubsub/: pubsub_client.py  pubsub_message.py
static/: pubsub_ws.js
tests/: conftest.py  pubsub.db  test_basic.py  test_client.py  test_integration.py  test_message_handling.py  test_pubsub_client.py  test_pubsub_modules.py  test_pubsub_ws.py  test_server.py
