[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "python_publisher_subscriber"
version = "1.0.0"
description = "A real-time Publisher-Subscriber system using WebSockets"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "venantvr", email = "venantvr@gmail.com" },
]
maintainers = [
    { name = "venantvr", email = "venantvr@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Framework :: Flask",
]
dependencies = [
    "Flask==3.0.0",
    "flask-socketio==5.3.6",
    "eventlet==0.40.3",
    "python-socketio[client]==5.10.0",
    "requests==2.32.4",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-mock==3.12.0",
    "pytest-asyncio==0.21.1",
    "pytest-watch==4.2.0",
    "build==1.0.3",
    "wheel==0.42.0",
    "setuptools>=61.0",
]
docs = [
    "sphinx==7.1.0",
    "sphinx-rtd-theme==1.3.0",
    "sphinx-autodoc-typehints==1.24.0",
]

[project.urls]
Homepage = "https://github.com/venantvr/Python.Publisher.Subscriber"
Documentation = "https://python-publisher-subscriber.readthedocs.io"
Repository = "https://github.com/venantvr/Python.Publisher.Subscriber.git"
Issues = "https://github.com/venantvr/Python.Publisher.Subscriber/issues"

[project.scripts]
pubsub-server = "pubsub_ws:main"
pubsub-client = "client:main"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
