[metadata]
name = Python.Publisher.Subscriber
version = 1.0.0
author = venantvr
author_email = venantvr@gmail.com
description = A real-time Publisher-Subscriber system using WebSockets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/venantvr/Python.Publisher.Subscriber
project_urls =
    Bug Tracker = https://github.com/venantvr/Python.Publisher.Subscriber/issues
    Documentation = https://github.com/venantvr/Python.Publisher.Subscriber/wiki
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    Framework :: Flask

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    Flask==3.0.0
    flask-socketio==5.3.6
    eventlet==0.40.3
    python-socketio[client]==5.10.0
    requests==2.32.4

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest==7.4.3
    pytest-cov==4.1.0
    pytest-mock==3.12.0
    pytest-asyncio==0.21.1
    pytest-watch==4.2.0
    black==24.3.0
    flake8==6.1.0
    mypy==1.8.0
    isort==5.13.2
    ruff==0.1.9
    bandit==1.7.5
    pre-commit==3.6.0
    build==1.0.3
    wheel==0.42.0
    setuptools>=61.0
docs =
    sphinx==7.1.0
    sphinx-rtd-theme==1.3.0
    sphinx-autodoc-typehints==1.24.0

[options.entry_points]
console_scripts =
    pubsub-server = pubsub_ws:main
    pubsub-client = client:main

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    .venv,
    venv

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_any_unimported = False
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
check_untyped_defs = True
strict_equality = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    -ra
    --strict-markers
    --cov=src
    --cov-report=term-missing
    --cov-report=html:coverage/htmlcov
    --cov-report=xml:coverage/coverage.xml
    --cov-report=json:coverage/coverage.json

[coverage:run]
source = src
omit =
    */tests/*
    */test_*.py
    */__pycache__/*
    */migrations/*
    */.venv/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if __name__ == .__main__.:
    raise AssertionError
    raise NotImplementedError
    if 0:
    if False:
    pass

[coverage:html]
directory = coverage/htmlcov

[isort]
profile = black
line_length = 100
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
